--- a/graphics/1x8x7.html
+++ b/graphics/1x8x7.html
@@ -21,8 +21,8 @@
         }
 
         .zd-social {
-            bottom: 100px;
             left: 0px;
+            top: 560px;
             width: 776px;
             height: 440px;
         }
