--- a/graphics/1x5x3+1x4x3.html
+++ b/graphics/1x5x3+1x4x3.html
@@ -9,55 +9,33 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #place2 {
-            right: 0;
-            bottom: 80px;
-            width: 417px;
-            height: 313px;
-        }
-
-        #placecam1, #placecam2 {
-            width: 768px;
-            height: 500px;
-        }
-
-        #placecam2 {
-            bottom: 80px;
-        }
-
-        #p1 {
-            top: 691px;
-            right: 417px;
-        }
-
         .zd-timer {
-            top: 691px;
-            left: 768px;
+            left: 1220px;
+            top: 860px;
         }
 
         .zd-social {
-            bottom: 195px;
-            left: 768px;
-            width: 735px;
-            height: 60px;
+            left: 720px;
+            top: 721px;
+            width: 372px;
+            height: 279px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="5x3" left="720" top="0" width="1200" height="720" :run-name="runName" player-num="0"></zd-feed>
+        <zd-feed kind="4x3" left="1548" top="721" width="372" height="279" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="720" height="500" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="0" top="500" width="720" height="500" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'5x3'" :left="768" :top="0" :width="1152" :height="691" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="1503" :top="691" :width="417" :height="313" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="0" :width="768" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="500" :width="768" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
