--- a/graphics/3x2x4x3.html
+++ b/graphics/3x2x4x3.html
@@ -9,47 +9,37 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        .zd-player, .zd-timer {
+        .zd-timer {
+            left: 1052px;
             top: 884px;
         }
 
-        #p1 {
-            right: 1080px;
-        }
-
-        #p2 {
-            right: 568px;
-        }
-
-        #p3 {
-            right: 56px;
-        }
-
-        .zd-timer {
-            left: 92px;
-        }
-
         .zd-social {
-            top: 28px;
-            left: 760px;
-            width: 400px;
-            height: 60px;
+            top: 680px;
+            left: 0px;
+            width: 384px;
+            height: 320px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="4x3" left="384" top="0" width="512" height="384" :run-name="runName"></zd-feed>
+        <zd-feed kind="4x3" left="384" top="384" width="512" height="384" :run-name="runName" player-num="0" nameplate-pos="bottom"></zd-feed>
+        <zd-feed kind="4x3" left="896" top="0" width="512" height="384" :run-name="runName"></zd-feed>
+        <zd-feed kind="4x3" left="896" top="384" width="512" height="384" :run-name="runName" player-num="1" nameplate-pos="bottom"></zd-feed>
+        <zd-feed kind="4x3" left="1408" top="0" width="512" height="384" :run-name="runName"></zd-feed>
+        <zd-feed kind="4x3" left="1408" top="384" width="512" height="384" :run-name="runName" player-num="2" nameplate-pos="bottom"></zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="384" height="340" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="0" top="340" width="384" height="340" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-player id="p1" :run-name="runName" :num="0"></zd-player>
-        <zd-player id="p2" :run-name="runName" :num="1"></zd-player>
-        <zd-player id="p3" :run-name="runName" :num="2"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
