--- a/graphics/4x4x3+1x4x3.html
+++ b/graphics/4x4x3+1x4x3.html
@@ -9,28 +9,12 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #p1, #p2 {
-            top: 432px;
-        }
-
-        #p3, #p4 {
-            bottom: 512px;
-        }
-
-        #p1, #p3 {
-            left: 88px;
-        }
-
-        #p2, #p4 {
-            right: 88px;
-        }
-
         .zd-social {
             left: 576px;
             width: 768px;
@@ -39,17 +23,12 @@
 </head>
 <body> 
     <div id="app">
-        <zd-placeholder :kind="'4x3'" :left="0" :top="0" :width="576" :height="432" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="1344" :top="0" :width="576" :height="432" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="0" :top="568" :width="576" :height="432" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="1344" :top="568" :width="576" :height="432" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="576" :top="60" :width="768" :height="576" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="576" :top="636" :width="768" :height="364" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
-        <zd-player id="p3" :num="2" :run-name="runName" :pos="'bottomleft'"></zd-player>
-        <zd-player id="p4" :num="3" :run-name="runName" :pos="'bottomleft'"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-feed kind="4x3" left="0" top="0" width="584" height="438" :run-name="runName" player-num="0"></zd-feed>
+        <zd-feed kind="4x3" left="1336" top="0" width="584" height="438" :run-name="runName" player-num="1"></zd-feed>
+        <zd-feed kind="4x3" left="0" top="562" width="584" height="438" :run-name="runName" player-num="2" nameplate-pos="top"></zd-feed>
+        <zd-feed kind="4x3" left="1336" top="562" width="584" height="438" :run-name="runName" player-num="3" nameplate-pos="top"></zd-feed>
+        <zd-feed kind="4x3" left="668" top="562" width="584" height="438" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="668" top="0" width="584" height="438" :run-name="runName"></zd-feed>
     </div>
 </body>
 </html>
