add sage icons to bingo

--- a/graphics/BotW.html
+++ b/graphics/BotW.html
@@ -129,7 +129,7 @@
         <zd-bingo-shared id="bonus1" type="even"></zd-bingo-shared>
         <zd-bingo-shared id="bonus2" type="odd"></zd-bingo-shared>
         <zd-timer></zd-timer>
-        <div id="rules">Rules: !bingo</div>
+        <div id="rules">!rules !team1-!team4</div>
     </div>
 </body>
 </html>
