--- a/graphics/e2x3x2.html
+++ b/graphics/e2x3x2.html
@@ -49,8 +49,8 @@
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="3x2" left="0" top="0" width="960" height="640" :run-name="runName" player-num="0" total-num-displayed="2"></zd-feed>
-        <zd-feed kind="3x2" left="960" top="0" width="960" height="640" :run-name="runName" player-num="1" total-num-displayed="2"></zd-feed>
+        <zd-feed kind="3x2" left="0" top="0" width="960" height="640" :run-name="runName" :player-num="0" :total-num-displayed="2"></zd-feed>
+        <zd-feed kind="3x2" left="960" top="0" width="960" height="640" :run-name="runName" :player-num="1" :total-num-displayed="2"></zd-feed>
         <zd-feed kind="cam" left="400" top="700" width="560" height="300" :run-name="runName"></zd-feed>
         <zd-feed kind="cam" left="960" top="700" width="560" height="300" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
