--- a/graphics/e14x3x2.html
+++ b/graphics/e14x3x2.html
@@ -34,20 +34,20 @@
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="3x2" left="0" top="0" width="384" height="256" :run-name="runName" player-num="0" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="384" top="0" width="384" height="256" :run-name="runName" player-num="1" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="768" top="0" width="384" height="256" :run-name="runName" player-num="2" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="1152" top="0" width="384" height="256" :run-name="runName" player-num="3" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="1536" top="0" width="384" height="256" :run-name="runName" player-num="4" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="0" top="316" width="384" height="256" :run-name="runName" player-num="5" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="384" top="316" width="384" height="256" :run-name="runName" player-num="6" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="768" top="316" width="384" height="256" :run-name="runName" player-num="7" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="1152" top="316" width="384" height="256" :run-name="runName" player-num="8" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="1536" top="316" width="384" height="256" :run-name="runName" player-num="9" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="0" top="632" width="384" height="256" :run-name="runName" player-num="10" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="384" top="632" width="384" height="256" :run-name="runName" player-num="11" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="1152" top="632" width="384" height="256" :run-name="runName" player-num="12" total-num-displayed="14"></zd-feed>
-        <zd-feed kind="3x2" left="1536" top="632" width="384" height="256" :run-name="runName" player-num="13" total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="0" top="0" width="384" height="256" :run-name="runName" :player-num="0" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="384" top="0" width="384" height="256" :run-name="runName" :player-num="1" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="768" top="0" width="384" height="256" :run-name="runName" :player-num="2" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="1152" top="0" width="384" height="256" :run-name="runName" :player-num="3" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="1536" top="0" width="384" height="256" :run-name="runName" :player-num="4" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="0" top="316" width="384" height="256" :run-name="runName" :player-num="5" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="384" top="316" width="384" height="256" :run-name="runName" :player-num="6" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="768" top="316" width="384" height="256" :run-name="runName" :player-num="7" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="1152" top="316" width="384" height="256" :run-name="runName" :player-num="8" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="1536" top="316" width="384" height="256" :run-name="runName" :player-num="9" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="0" top="632" width="384" height="256" :run-name="runName" :player-num="10" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="384" top="632" width="384" height="256" :run-name="runName" :player-num="11" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="1152" top="632" width="384" height="256" :run-name="runName" :player-num="12" :total-num-displayed="14"></zd-feed>
+        <zd-feed kind="3x2" left="1536" top="632" width="384" height="256" :run-name="runName" :player-num="13" :total-num-displayed="14"></zd-feed>
         <zd-feed kind="cam" left="768" top="632" width="384" height="368" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
         <zd-checkpoint></zd-checkpoint>
