--- a/graphics/e1x3x2.html
+++ b/graphics/e1x3x2.html
@@ -41,7 +41,7 @@
 <body> 
     <div id="app">
         <zd-feed kind="3x2" left="420" top="0" width="1500" height="1000" :run-name="runName"></zd-feed>
-        <zd-feed kind="cam" left="0" top="0" width="420" height="300" :run-name="runName"  player-num="0" total-num-displayed="1"></zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="420" height="300" :run-name="runName" :player-num="0" :total-num-displayed="1"></zd-feed>
         <zd-timer></zd-timer>
         <zd-social></zd-social>
         <zd-checkpoint></zd-checkpoint>
