--- a/graphics/e6x3x2.html
+++ b/graphics/e6x3x2.html
@@ -65,12 +65,12 @@
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="3x2" left="0" top="0" width="480" height="320" :run-name="runName" player-num="0" total-num-displayed="6"></zd-feed>
-        <zd-feed kind="3x2" left="480" top="0" width="480" height="320" :run-name="runName" player-num="1" total-num-displayed="6"></zd-feed>
-        <zd-feed kind="3x2" left="960" top="0" width="480" height="320" :run-name="runName" player-num="2" total-num-displayed="6"></zd-feed>
-        <zd-feed kind="3x2" left="1440" top="0" width="480" height="320" :run-name="runName" player-num="3" total-num-displayed="6"></zd-feed>
-        <zd-feed kind="3x2" left="0" top="380" width="480" height="320" :run-name="runName" player-num="4" total-num-displayed="6"></zd-feed>
-        <zd-feed kind="3x2" left="1440" top="380" width="480" height="320" :run-name="runName" player-num="5" total-num-displayed="6"></zd-feed>
+        <zd-feed kind="3x2" left="0" top="0" width="480" height="320" :run-name="runName" :player-num="0" :total-num-displayed="6"></zd-feed>
+        <zd-feed kind="3x2" left="480" top="0" width="480" height="320" :run-name="runName" :player-num="1" :total-num-displayed="6"></zd-feed>
+        <zd-feed kind="3x2" left="960" top="0" width="480" height="320" :run-name="runName" :player-num="2" :total-num-displayed="6"></zd-feed>
+        <zd-feed kind="3x2" left="1440" top="0" width="480" height="320" :run-name="runName" :player-num="3" :total-num-displayed="6"></zd-feed>
+        <zd-feed kind="3x2" left="0" top="380" width="480" height="320" :run-name="runName" :player-num="4" :total-num-displayed="6"></zd-feed>
+        <zd-feed kind="3x2" left="1440" top="380" width="480" height="320" :run-name="runName" :player-num="5" :total-num-displayed="6"></zd-feed>
         <zd-feed kind="cam" left="480" top="380" width="960" height="560" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
         <zd-social></zd-social>
