--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -198,9 +198,9 @@
         width: 100px; /* Feather: 34 */
         height: 100%;
         background: right / auto 66px no-repeat
-          url("../shared/images/ZDM23_Logo.png");
+          url("../shared/images/ZDM24_Logo_WhiteStroke.png");
         background-position-x: 0px;
-        transform: scale(1.5);
+        transform: scale(1.6) translate(10px, 4px);
       }
 
       .zd-omnibar__slideover-body {
