--- a/graphics/4x8x7.html
+++ b/graphics/4x8x7.html
@@ -13,39 +13,42 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/components/checkpoint.js"></script>
     <script defer src="./layout.js"></script>
     <style>
         .zd-timer {
-            top: 440px;
-            left: 200px;
+            right: 665px;
+            top: 690px;
         }
 
         .zd-social {
+            left: 571px;
             top: 500px;
-            left: 0px;
-            width: 600px;
+            width: 389px;
             height: 440px;
         }
 
-        .zd-checkpoint {
-            left: 0px;
-            top: 940px;
-            width: 600px;
-            height: 60px;
+        .zd-player {
+            width: 389px;
+        }
+
+        .zd-player--right {
+            left: -389px !important;
+        }
+
+        .zd-player--left {
+            right: -389px !important;
         }
     </style>
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="3x2" left="600" top="0" width="660" height="440" :run-name="runName" :player-num="0" :total-num-displayed="4"></zd-feed>
-        <zd-feed kind="3x2" left="1260" top="0" width="660" height="440" :run-name="runName" :player-num="1" :total-num-displayed="4"></zd-feed>
-        <zd-feed kind="3x2" left="600" top="500" width="660" height="440" :run-name="runName" :player-num="2" :total-num-displayed="4"></zd-feed>
-        <zd-feed kind="3x2" left="1260" top="500" width="660" height="440" :run-name="runName" :player-num="3" :total-num-displayed="4"></zd-feed>
-        <zd-feed kind="cam" left="0" top="0" width="600" height="440" :run-name="runName"></zd-feed>
+        <zd-feed kind="8x7" left="0" top="0" width="571" height="500" :run-name="runName" player-num="0" nameplate-pos="righttop"></zd-feed>
+        <zd-feed kind="8x7" left="1349" top="0" width="571" height="500" :run-name="runName" player-num="1" nameplate-pos="lefttop"></zd-feed>
+        <zd-feed kind="8x7" left="0" top="500" width="571" height="500" :run-name="runName" player-num="2" nameplate-pos="rightbottom"></zd-feed>
+        <zd-feed kind="8x7" left="1349" top="500" width="571" height="500" :run-name="runName" player-num="3" nameplate-pos="leftbottom"></zd-feed>
+        <zd-feed kind="cam" left="571" top="60" width="778" height="440" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
         <zd-social></zd-social>
-        <zd-checkpoint></zd-checkpoint>
     </div>
 </body>
 </html>
