--- a/graphics/countdown.html
+++ b/graphics/countdown.html
@@ -27,11 +27,16 @@ window.onload = function() {
 
     const app = new Vue({
         el: "#app",
-        template: `<div>
-		<img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDM24_Logo.png" />
-		<div style="text-align: center; font-size: 2em; margin-top: 100px;">Starts in {{ time }}</div>
-		<zd-social style="margin-top: 100px;"></zd-social>
-	</div>`,
+        template: `<div style="display: flex; align-items: center">
+            <div style="display: inline-block; width: 960px;">
+                <img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDM24_Logo.png" />
+		        <div style="text-align: center; font-size: 2em; margin-top: 100px;">Starts in {{ time }}</div>
+		        <zd-social style="margin-top: 50px; height: 400px;"></zd-social>
+	        </div><div style="display: inline-block; width: 960px; text-align: center;">
+                <div style="text-align: center; font-size: 2em;">Going on now!</div><br/>
+                <img width="600" src="../shared/images/2024-LZCC-Logos-02.jpg" />
+            </div>
+        </div>`,
         data: {
 		now: new Date()
         },
